--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
 					<article>
 						<div class="inner" style="width: 49%; display: inline-block;">
 							<h4>Volo E-Solutions Pune, IN</h4>
-							<p>I worked for 2 years here as a Full-Stack Developer and worked on a web product used by banks.</p>
+							<p>I worked for 2 years here as a Full-Stack Developer and worked on web applications used by banks.</p>
 						</div>
 						<div class="inner" style="width: 49%; display: inline-block;">
 							<h4>Reliance Industries, Mumbai, IN</h4>
-							<p>I worked on developing web applications used by the Engineering vertical and telecom business withing the company.
+							<p>I worked on developing web applications used by the Engineering vertical and telecom business within the company.
 							</p>
 						</div>
 					</article>
