nav bar positioning

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
 			<ul>
 				<li><a href="#one" class="active">About</a></li>
 				<li><a href="#two">Things I Can Do</a></li>
-				
+				<li><a href="#three">A Few of my projects</a></li>
 				<li><a href="#professional">Professional Experience</a></li>
-				<li><a href="#three">A Few Accomplishments</a></li>
 				<li><a href="#resume">My Resume</a></li>
 				<li><a href="#four">Contact</a></li>
 			</ul>
