--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
 							</div>
 						</article>
 						<article>
+							<a href="https://github.com/pranay-24/Collateral-app"
+								target="_blank" class="image"><img src="images/Homepage.jpg" alt="Project - watchlist" /></a>
+							<div class="inner">
+								<a href="https://github.com/pranay-24/Collateral-app"
+									target="_blank">
+									<h4>Collateral Management App</h4>
+								</a>
+								<p>Collateral App is a Node.JS application which is used to track the real time value of collaterals pledged. The collaterals could be Stocks and Crypto currency. Marketstack and CoinAPI are used to fetch real time prices.Concepts used are Server Side rendering, API fetch etc. </p>
+							</div>
+						</article>
+
+						<article>
 							<a href="http://codepranay.great-site.net/LinkedIn_Message_Generator/" target="_blank" class="image"><img
 									src="./images/pet-project.jpg" alt="" /></a>
 							<div class="inner">
