--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 									src="images/Budget app.jpg" alt="" /></a>
 							<div class="inner">
 								<a href="https://github.com/pranay-24/budget" target="_blank">
-									<h4>Budget and Expnse tracker</h4>
+									<h4>Budget and Expense tracker</h4>
 								</a>
 								<p>I built this application when I was working part time in an events company, they used this app to maintain budget and add expenses. This is built using react</p>
 							</div>
