--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 					<article>
 						<div class="inner" style="width: 49%; display: inline-block;">
 							<h4>Volo E-Solutions Pune, IN</h4>
-							<p>I worked for 2 years here as a Full-Stack Developer and worked on web applications used by banks.</p>
+							<p>I worked for 2 years here as a Full-Stack Developer and worked on web applications used by banks. Followed the Agile methodology and built 50+ components to drive various user-facing functionalities. </p>
 						</div>
 						<div class="inner" style="width: 49%; display: inline-block;">
 							<h4>Reliance Industries, Mumbai, IN</h4>
