--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@
 			<h1 id="logo"><a href="#">Pranay Mangal </a></h1>
 			<p>A kind Human Being<br />
 				Who loves computer softwares a bit more than anything else.</p>
+				<ul class="social">
+					<li>
+					  <a href="">
+						<i class="fab fa-instagram"></i>
+					  </a>
+					</li>
+					<li>
+					  <a href="">
+						<i class="fab fa-twitter"></i>
+					  </a>
+					</li>
+					<li>
+					  <a href="">
+						<i class="fab fa-youtube"></i>
+					  </a>
+					</li>
+				  </ul>
+				  
 		</header>
 		<nav id="nav">
 			<ul>
@@ -257,7 +275,7 @@
 	<script src="./js/breakpoints.min.js"></script>
 	<script src="./js/main.js"></script>
 	<script src="./js/util.js"></script>
-
+	<script src="https://kit.fontawesome.com/d3998de45c.js"></script>
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
 	<!-- <script src="/__/firebase/8.4.3/firebase-app.js"></script> -->
 
@@ -270,7 +288,7 @@
 
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 	<script type="text/javascript">
-
+	
 		(function () {
 
 			//init("user_03h1gOu1dEj4zBhVnTSbv");
