--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
 				Who loves computer softwares a bit more than anything else.</p>
 				
 				<ul class="icons">
-					<li><a href="https://twitter.com/beckspes10" target="_blank" class="icon brands fa-twitter"><span
-								class="label">Twitter</span></a></li>
-					<li><a href="" target="_blank"
-							class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="" target="_blank"
-							class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="" target="_blank" class="icon brands fa-github"><span
+					<!-- <li><a href="https://twitter.com/beckspes10" target="_blank" class="icon brands fa-twitter"><span
+								class="label">Twitter</span></a></li> -->
+					<li><a href="https://www.linkedin.com/in/pranay-mangal-9a55951a/" target="_blank"
+							class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/pranay-24" target="_blank" class="icon brands fa-github"><span
 								class="label">Github</span></a></li>
+					<li><a href="https://www.instagram.com/pranay.mangal.3/" target="_blank"
+							class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					
 					<li><a href="mailto:mangal.pranay@gmail.com" target="_blank" class="icon solid fa-envelope"><span
 								class="label">Email</span></a></li>
 				</ul>
