--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 						<a href=""
 							target="_blank"><img src="resume-my.JPG" alt="" /></a>
 						<div class="inner">
-							<a class="resume-link" href="images/Resume - Pranay Mangal.pdf"
+							<a class="resume-link" href="images/Pranay_Mangal_Resume.pdf"
 								target="_blank">
 								<h4>Here is my Resume</h4>
 							</a>
