--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<section id="two">
 				<div class="container">
 					<h3>Things I Can Do</h3>
-					<p>C# .Net Development, React.js, Angular, NodeJS, PHP, Laravel, MySQL  and not to forget the old school
+					<p>Python,Django, Typescript, React.js, NodeJS, PHP, MySQL, AWS  and not to forget the old school
 						Javascript. &#128374; </p>
 					<ul class="feature-icons">
 						<li class="icon solid fa-code">I can write some code</li>
