--- a/index.html
+++ b/index.html
@@ -132,6 +132,28 @@
 					<p>Here are a few projects which I have done individually apart from my professional work.</p>
 					<div class="features">
 						<article>
+							<a href="https://bluebest-site-0ce4f91f3c4fb18aff768b4b5.webflow.io/home-pages/home-v2"
+								target="_blank" class="image"><img src="images/project1.png" alt="Project - BlueBest" /></a>
+							<div class="inner">
+								<a href="https://bluebest-site-0ce4f91f3c4fb18aff768b4b5.webflow.io/home-pages/home-v2"
+									target="_blank">
+									<h4>Blue Best Website Development</h4>
+								</a>
+								<p>Worked with Interconnections Media Inc, Toronto to design and develop a new website on webflow for Blue Best HVAC company based in US. The website is fully responsive, has animations, CMS content and is optimized for SEO.</p>
+							</div>
+						</article>
+						<article>
+							<a href="https://turmeric-billing.webflow.io/"
+								target="_blank" class="image"><img src="images/Project turmeric billing.png" alt="Project - Turmeric Billing" /></a>
+							<div class="inner">
+								<a href="https://turmeric-billing.webflow.io/"
+									target="_blank">
+									<h4>Turmeric Billing Lead Generation Website</h4>
+								</a>
+								<p>Worked with Interconnections Media Inc, Toronto to design and develop Lead generation webpages for their client Turmeric Billing. I built the website from scratch in webflow. It is fully responsive, has animations and is optimized for SEO.</p>
+							</div>
+						</article>
+						<article>
 							<a href="https://github.com/pranay-24/Portfolio-Management"
 								target="_blank" class="image"><img src="images/Watchlist.jpg" alt="Project - watchlist" /></a>
 							<div class="inner">
