--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<div class="container">
 					<header class="major">
 						<h2>Hello. | Namaste.</h2>
-						<p>I am a post-grad student at Humber College, also a full-stack web developer.</p>
+						<p>I am a post-grad student at Humber College, also a freelance full-stack web developer.</p>
 					</header>
 					
 				</div>
@@ -111,7 +111,7 @@
 			<section id="two">
 				<div class="container">
 					<h3>Things I Can Do</h3>
-					<p>Python,Django, Typescript, React.js, NodeJS, PHP, MySQL, AWS  and not to forget the old school
+					<p>Python, Django, Typescript, React.js, NodeJS, PHP, MySQL, AWS  and not to forget the old school
 						Javascript. &#128374; </p>
 					<ul class="feature-icons">
 						<li class="icon solid fa-code">I can write some code</li>
