--- a/index.html
+++ b/index.html
@@ -262,6 +262,14 @@
 			<section id="four">
 				<div class="container">
 					<h3>Contact Me</h3>
+					<div class="flex">
+					<a href="mangal.pranay@gmail.com" class="icon solid fa-envelope">
+					<span class="email-span">mangal.pranay@gmail.com </span>
+					</a>
+					<a href="https://www.theinterconnections.com/" class="icon solid fa-briefcase">
+						<span class="email-span">The Interconnections Media Inc, Toronto </span>
+						</a>
+					</div>
 					<p>If you want to collaborate or you want to know more about me and my work. Also, I am always up
 						for your social media texts.</p>
 					<form id="contact-form">
